<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="shizuku_state"
        android:persistent="false"
        android:title="@string/shizuku_state" />
    <Preference
        android:key="self_battery_optimization"
        android:persistent="false"
        android:summary="@string/self_battery_optimization_not_in_allowlist"
        android:title="@string/self_battery_optimization" />
    <SwitchPreference
        android:key="service_enabled"
        android:enabled="false"
        android:persistent="false"
        android:summary="@string/service_enabled_summary"
        android:title="@string/service_enabled" />
    <SwitchPreference
        android:key="auto_allow_fcm_wake_for_play_store_apps"
        android:persistent="false"
        android:summary="@string/auto_allow_fcm_wake_for_play_store_apps_summary"
        android:title="@string/auto_allow_fcm_wake_for_play_store_apps" />
    <Preference
        android:key="app_list"
        android:enabled="false"
        android:persistent="false"
        android:summary="@string/app_list_summary"
        android:title="@string/app_list" />
    <Preference
        android:key="history"
        android:enabled="false"
        android:persistent="false"
        android:summary="@string/history_summary"
        android:title="@string/history" />
</PreferenceScreen>
