<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="72dp"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp" />

        <com.github.kr328.simplefcmfix.ChipFlowLayout
            android:id="@+id/status_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:visibility="gone"
            app:spacing="4dp">

            <TextView
                android:id="@+id/status_fcm"
                style="@style/AppStatusChip"
                android:text="@string/app_status_fcm" />

            <TextView
                android:id="@+id/status_play_store"
                style="@style/AppStatusChip"
                android:text="@string/app_status_play_store" />

            <TextView
                android:id="@+id/status_no_restriction"
                style="@style/AppStatusChip"
                android:text="@string/app_status_no_restriction" />

            <TextView
                android:id="@+id/status_autostart"
                style="@style/AppStatusChip"
                android:text="@string/app_status_autostart" />
        </com.github.kr328.simplefcmfix.ChipFlowLayout>
    </LinearLayout>
</LinearLayout>
